--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -30,6 +30,10 @@
 
 
     {% endblock %}
+
+    {% include 'partials/footer.html' %}
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'js/popUps.js' %}"></script>
     <script src="{% static 'js/main.js' %}" type="module"></script>
