--- a/hotel/accounts/templates/accounts/signup.html
+++ b/hotel/accounts/templates/accounts/signup.html
@@ -2,19 +2,98 @@
 
 {% load static %}
 
-
-
 {% block title %}
+
+{% endblock %}
+
+{%  block style %}
+<link rel="stylesheet" href="{% static 'css/signup.css' %}">
 
 {% endblock %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    {{profile_form.as_p}}
-    <input type="submit" value="Sign Up">
-</form>
+<div class="container flex flex-column items-center justify-center">
+    <h1>Sign Up</h1>
+    <form id="signup-form" class="flex flex-column space-between" method="post">
+        {% csrf_token %}
+        
+        <div id="signup-fields" class="flex flex-column field-container space-between">
+            <!-- User form -->
+            {% for field in form %}
+            <div class="signup-field flex items-center">
+                <label class="signup-label" for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field}}
+            </div>
+            {% if field.errors %}
+                {% for error in field.errors %}
+                    <div class="error">{{error}}</div>
+                {% endfor %}
+            {% endif %}
+            {{field.help_text}}
+            {% endfor %}
+
+            <!-- Profile form -->
+            {% for field in profile_form %}
+            <div class="signup-field flex items-center">
+                <label class="signup-label" for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field}}
+            </div>
+            {% if field.errors %}
+                {% for error in field.errors %}
+                    <div class="error">{{error}}</div>
+                {% endfor %}
+            {% endif %}
+            {{field.help_text}}
+            {% endfor %}
+        </div>
+
+        <button class="form-control btn-primary" type="submit">Submit</button>
+    </form>
+</div>
 
 {% endblock %}
+
+
+{% block script %}
+
+<script src="{% static 'js/signup.js' %}"></script>
+
+{% endblock %}
+
+
+<div id="signup-card" class="">
+    <form class="flex flex-column" action="post">
+    {% csrf_token %}
+    <div class="flex flex-column field-container">
+        {% for field in form %}
+        <div class="field flex">
+            <label for="{{field.id_for_label}}">{{field.label}}</label>
+            {{field}}
+            {{field.help_text}}
+        </div>
+            {% if field.errors %}
+                {% for error in field.errors %}
+                <div class="errors flex items-center">{{error}}</div>
+                {% endfor %}
+            {% endif %}
+        {% endfor %}
+    </div>
+        
+    <div class="flex flex-column field-container">
+        {% for field in profile_form %}
+        <div class="field flex flex-column">
+            <label for="{{field.id_for_label}}">{{field.label}}</label>
+            {{field}}
+            {{field.help_text}}
+        </div>
+            {% if field.errors %}
+                {% for error in field.errors %}
+                <div class="errors flex items-center">{{error}}</div>
+                {% endfor %}
+            {% endif %}
+        {% endfor %}
+    </div>
+        <button id="signup-submit" class="btn-primary form-control" type="submit">Submit</button>
+    </form>
+</div>
