--- a/hotel/static/css/global.css
+++ b/hotel/static/css/global.css
@@ -26,11 +26,11 @@ body, html {
 
 
 /* Utility classes */
-.flex {
+.flex, .btn {
     display: flex;
 }
 
-.flex-center {
+.flex-center, .btn {
     justify-content: center;
     align-items: center;
 }
@@ -112,6 +112,19 @@ body, html {
     width: 100%;
 }
 
+.guests, .btn {
+    height: 40px;
+    width: 100%;
+    border: var(--button-border);
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: inherit;
+}
+
+.card-bottom {
+    height: 30%;
+    padding: 0 10%;
+}
 
 /* End of utility */
 
