--- a/hotel/users/templates/users/rooms.html
+++ b/hotel/users/templates/users/rooms.html
@@ -16,12 +16,39 @@
 
 
 <div class="booking-date flex flex-center">
-    <span class="stay">Your Stay </span> 
-    <i class="far fa-calendar-alt"></i> 
-    Mon, Jan 10 – Tue, Jan 11, 2022Monday, January 10, 2022 through Tuesday, January 11, 2022(1 night) | 2 rooms for 2 adults
+    <div class="flex">
+        <span class="stay">Your Stay </span>
+        <i class="far fa-calendar-alt"></i>
+        <span>{{check_in_date}} - {{check_out_date}} ({{nights}} {% if nights > 1 %} nights {% else %} night {% endif %})</span>
+        <span class="flex flex-center">
+            <span class="people-icon flex flex-center">
+                <svg aria-hidden="true" data-testid="" focusable="false" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke="#1D1D1D" stroke-linecap="round" stroke-width="1.5"><path d="M12.156 14.116c-.068-.752-.042-1.276-.042-1.963.34-.178.95-1.316 1.053-2.278.267-.022.69-.283.813-1.314.066-.553-.198-.864-.36-.962.436-1.31 1.34-5.36-1.672-5.78C11.638 1.276 10.845 1 9.813 1c-4.127.076-4.625 3.116-3.72 6.599-.161.098-.426.41-.36.962.124 1.031.546 1.292.813 1.314.103.962.737 2.1 1.078 2.278 0 .687.025 1.211-.042 1.963C6.765 16.31 1.255 15.695 1 19.929h17.713c-.254-4.234-5.74-3.618-6.557-5.813z"></path><path d="M17.511 17.406h5.863c-.213-3.565-4.834-3.046-5.522-4.894-.057-.634-.035-1.075-.035-1.654.287-.15.8-1.108.887-1.918.225-.019.58-.238.685-1.106.056-.466-.168-.728-.304-.811.367-1.103 1.13-4.513-1.408-4.867-.26-.458-.929-.69-1.798-.69-1.097.02-1.889.29-2.437.74"></path></g></svg>
+            </span>
+            {{length}} 
+            {% if length > 1 %}
+            rooms
+            {% else %}
+            room
+            {% endif %} 
+            for 
+            {{adults_count}} 
+            {% if adults_count > 1 %}
+                adults 
+             {% else %}
+                adult
+            {% endif %}
+            {% if children_count %} 
+                and 
+            {{children_count}} 
+            {% if children_count > 1 %} 
+                children 
+            {% else %} 
+                child 
+            {% endif %} 
+            {% endif %}
+        </span>
+    </div>
 </div>
-
-<h2>{{check_in_date}} {{check_out_date}}</h2>
 
 {% if messages %}
 <ul class="messages">
@@ -30,22 +57,81 @@
     {% endfor %}
 </ul>
 {% endif %}
-<div id="room-container" class="flex flex-center">
-    <div class="grid-row" data-row-count="{{rooms|length}}">
-            {% for room in rooms %}
-            <div class="card room-card">
-                <img class="room-image" src="{% static 'images/' %}{{room.room_type.image}}" alt="room">
-                <div class="card-bottom flex flex-center">
-                    <a class="btn btn-primary space-around" href="{% url 'next_room' room.id booking.id last_booking length %}"><span>Book</span> <span>{{room.room_price}}</span></a>
-                </div>
-            </div>
-            {% endfor %}
+
+<div class="room-select">
+    <span>Room {{room_num}} Of {{length}}</span>
+    <h1>Select a Room</h1>
+    <div class="room-count flex">
+        {% for num in room_count %}
+            {% if num == room_num %}
+            <div class="room active">Room {{num}}</div>
+            {% else %}
+            <div class="room disabled">Room {{num}}</div>
+            {% endif %}
+        {% endfor %}
+        <div class="room disabled">Payment</div>
     </div>
 </div>
 
+<div id="room-container" class="flex flex-start flex-column">
+    <div class="room-summary">We found {{amount_of_rooms}} rooms for you</div>
 
+    <div class="flex">
+        <div class="grid-row" data-row-count="{{rooms|length}}">
+                {% for room in rooms %}
+                <div class="card room-card">
+                    <img class="room-image" src="{% static 'images/' %}{{room.room_type.image}}" alt="room">
+                    <div class="card-bottom flex flex-center">
+                        <a class="btn btn-primary space-between card-btn" href="{% url 'next_room' room.id booking.id last_booking room_num adults_count children_count length %}"><span>Select Room</span> <span>${{room.room_price.price}}</span></a>
+                    </div>
+                </div>
+                {% endfor %}
+        </div>
 
-
+        <div class="booking-summary">
+            <div class="card">
+                <h3>Reservation Summary</h3>
+                {% for booking in bookings %}
+                    {% if forloop.counter == room_num %}
+                    <div class="flex space-between current-room">
+                        {% else %}
+                    <div class="flex space-between">
+                    {% endif %}
+                        <div class="flex flex-column">
+                            {% if forloop.counter == room_num %}
+                            <p class="room-header bold">Room {{forloop.counter}}</p>
+                            {% else %}
+                            <p class="room-header">Room {{forloop.counter}}</p>
+                            {% endif %}
+                            <span class="flex">
+                                <span class="people-icon flex flex-center">
+                                    <svg aria-hidden="true" data-testid="" focusable="false" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke="#1D1D1D" stroke-linecap="round" stroke-width="1.5"><path d="M12.156 14.116c-.068-.752-.042-1.276-.042-1.963.34-.178.95-1.316 1.053-2.278.267-.022.69-.283.813-1.314.066-.553-.198-.864-.36-.962.436-1.31 1.34-5.36-1.672-5.78C11.638 1.276 10.845 1 9.813 1c-4.127.076-4.625 3.116-3.72 6.599-.161.098-.426.41-.36.962.124 1.031.546 1.292.813 1.314.103.962.737 2.1 1.078 2.278 0 .687.025 1.211-.042 1.963C6.765 16.31 1.255 15.695 1 19.929h17.713c-.254-4.234-5.74-3.618-6.557-5.813z"></path><path d="M17.511 17.406h5.863c-.213-3.565-4.834-3.046-5.522-4.894-.057-.634-.035-1.075-.035-1.654.287-.15.8-1.108.887-1.918.225-.019.58-.238.685-1.106.056-.466-.168-.728-.304-.811.367-1.103 1.13-4.513-1.408-4.867-.26-.458-.929-.69-1.798-.69-1.097.02-1.889.29-2.437.74"></path></g></svg>
+                                </span>
+                                {{booking.adults}}
+                                {% if booking.adults > 1 %}
+                                    adults
+                                 {% else %}
+                                    adult
+                                {% endif %}
+                                {% if booking.children %}
+                                    and
+                                {{booking.children}}
+                                {% if booking.children > 1 %}
+                                    children
+                                {% else %}
+                                    child
+                                {% endif %}
+                                {% endif %}
+                            </span>
+                        </div>
+                        <div class="room-price">${{booking.total_price}}</div>
+                    </div>
+                    {% endfor %}
+                    <div class="total-price flex space-between"><span>Total For Stay:</span> <span>${% if total_for_stay %}{{total_for_stay}}{%else%} 0 {% endif %}</span></div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
@@ -54,16 +140,3 @@
     <script src="{% static 'js/rooms.js' %}"></script>
 {% endblock %}
 
-<div id="room-container" class="flex flex-center">
-    <div class="grid-row" data-row-count="{{rooms|length}}">
-    {% for obj in rooms %}
-        {% for room in obj %}
-        <div class="card room-card">
-            <img class="room-image" src="{% static 'images/' %}{{room.room_type.image}}" alt="room">
-            {{room}}
-            <a href="{{room.id}}{{booking.id}}">Book Room ${{room.room_price}}</a>
-        </div>
-        {% endfor %}
-        {% endfor %}
-    </div>
-</div>
