--- a/hotel/templates/base.html
+++ b/hotel/templates/base.html
@@ -33,10 +33,14 @@
 
 
     {% include 'partials/footer.html' %}
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'js/popUps.js' %}"></script>
     <script src="{% static 'js/main.js' %}" type="module"></script>
     <script src="{% static 'js/formValidation.js' %}" type="module"></script>
+
+    {% block script %}
+    {% endblock %}
 </body>
 </html>
 
